--- a/index.html
+++ b/index.html
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Piano Virtual</title>
 
-<link rel="stylesheet" href="./styles/style.css">
-<link rel="stylesheet" href="./styles/reset.css">
+    <!-- Fonts -->
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,
+    300;0,400;1,100;1,200;1,300;1,400&display=swap" rel="stylesheet">
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/reset.css">
+
+    <!-- Icon -->
+    <link rel="icon" href="./images/piano.ico" type="" icon>
 
 </head>
+
 <body>
     <div class="container">
         <header>
@@ -17,28 +30,31 @@
             </div>
 
             <div class="column keys-check">
-                <span>Teclas</span><input type="checkbox"cheked></div>
+                <span>Teclas</span><input type="checkbox" cheked>
+            </div>
         </header>
         <ul class="piano-keys">
-            <li class="key"><span></span></li>
-            <li class="key"><span></span></li>
-            <li class="key"><span></span></li>
-            <li class="key"><span></span></li>
-            <li class="key"><span></span></li>
-            <li class="key"><span></span></li>
-            <li class="key"><span></span></li>
-            <li class="key"><span></span></li>
-            <li class="key"><span></span></li>
-            <li class="key"><span></span></li>
-            <li class="key"><span></span></li>
-            <li class="key"><span></span></li>
-            <li class="key"><span></span></li>
-            <li class="key"><span></span></li>
-            <li class="key"><span></span></li>
-            <li class="key"><span></span></li>
+            <li class="key white"><span>a</span></li>
+            <li class="key black" data-key="w"><span>w</span></li>
+            <li class="key white" data-key="s"><span>s</span></li>
+            <li class="key black" data-key="e"><span>e</span></li>
+            <li class="key white" data-key="d"><span>d</span></li>
+            <li class="key black" data-key="f"><span>f</span></li>
+            <li class="key white" data-key="t"><span>t</span></li>
+            <li class="key black" data-key="g"><span>g</span></li>
+            <li class="key white" data-key="y"><span>y</span></li>
+            <li class="key black" data-key="h"><span>h</span></li>
+            <li class="key white" data-key="u"><span>u</span></li>
+            <li class="key black" data-key="j"><span>j</span></li>
+            <li class="key white" data-key="k"><span>k</span></li>
+            <li class="key black" data-key="o"><span>o</span></li>
+            <li class="key white" data-key="l"><span>l</span></li>
+            <li class="key black" data-key="p"><span>p</span></li>
+            <li class="key white" data-key=";"><span>;</span></li>
         </ul>
     </div>
 
-<script src="./scripts/main.js"></script>
+    <script src="./scripts/main.js" defer></script>
 </body>
+
 </html>
