--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,
-    300;0,400;1,100;1,200;1,300;1,400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;1,100;1,200;1,300;1,400&display=swap"
+     rel="stylesheet">
 
     <!-- CSS -->
     <link rel="stylesheet" href="./styles/style.css">
@@ -26,15 +26,16 @@
     <div class="container">
         <header>
             <h2>Piano Virtual</h2>
-            <div class="column volume-slider"><span>Volume</span> <input type="range">
+            <div class="column volume-slider"><span>Volume</span> <input type="range" min="0" max="1" value="0.5" step="any">
             </div>
 
             <div class="column keys-check">
-                <span>Teclas</span><input type="checkbox" cheked>
+                <span>Teclas</span><input type="checkbox" checked>
             </div>
         </header>
+        
         <ul class="piano-keys">
-            <li class="key white"><span>a</span></li>
+            <li class="key white" data-key="a"><span>a</span></li> 
             <li class="key black" data-key="w"><span>w</span></li>
             <li class="key white" data-key="s"><span>s</span></li>
             <li class="key black" data-key="e"><span>e</span></li>
